# RezolutionMuOSTheme

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
muos_rezolution/: __main__.py
muos_rezolution/resources/__common/: credits.txt
muos_rezolution/resources/__factory/data/: template.json.example  templateDark.json  templateIndigo.json  templateOLED.json  templateWhite.json
muos_rezolution/resources/__factory/template/: default.txt  muxlaunch.txt  muxplore.txt
muos_rezolution/resources/__icons/opt/: update.sh
muos_rezolution/resources/variants/Dark/: theme_name
muos_rezolution/resources/variants/Indigo/: theme_name
muos_rezolution/resources/variants/OLED/: theme_name
muos_rezolution/resources/variants/White/: theme_name
muos_rezolution/tools/: display_tools.py  files_tools.py  generate_tools.py  mustache_tools.py
scheme/: default.txt  muxlaunch.txt
